@@ -1,5 +1,13 @@
 2016-09-22  Richard Biener  <rguenther@suse.de>
 
+	PR middle-end/77677
+	* gimple-match-head.c (gimple_resimplify1): Drop TREE_OVERFLOW
+	from constant folding results.
+	(gimple_resimplify2): Likewise.
+	(gimple_resimplify3): Likewise.
+
+2016-09-22  Richard Biener  <rguenther@suse.de>
+
 	PR middle-end/77678
 	* expr.c (expand_expr_real_1): Guard array access against negative
 	offset.
